# linkedin-apply-ai-agent

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Obsolete  README.md  agents.md  claude.md  docker-compose.prod.yml  docker-compose.yml  implementation-plan.md  main.py  piccolo_conf.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: docker-image.yml  release.yml
data/cv/: master_cv.example.json
docs/: DEPLOY.md  deployment.md  testing_guide.md
docs/plans/: 2026-07-04-llm-layer-improvements.md  ARCHITECTURE-browser-agent.md  admin-role-and-admin-page.md  backend-architecture-refactoring.md  easy-apply-happy-path.md  hitl-e2e-tests.md  job-fixture-replay.md  linkedin-apply-chrome-extension.md  linkedin-job-source-adapter.md  llm-job-filter.md  multi-user-support.md  per-operation-llm-model-picker.md  persist-jobs-at-discovery.md  persistent-browser-profile-auth.md  prompt-caching.md  (+8 more)
extension/: background.js  content_script.js  manifest.json
scripts/: benchmark_prompt_cache.py  capture_linkedin_cookies.py  cleanup_empty_description_jobs.py  debug_linkedin_detail.py  debug_test_h2_path.py  dev.ps1  dev.sh  linkedin_authed_probe.py  linkedin_login_headed.py  linkedin_scraper_probe.py  linkedin_scraper_smoke.py  promote_user.py  record_fixtures.py  test_cv_template.py  test_pdf_generation.py  test_scrape_workflow.py
src/: __init__.py  context.py
tests/: README.md  conftest.py
ui/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
(+316 files in other folders)
